resources/envoy.yaml
# Envoy OAuth2 proxy configuration
#
# Envoy settings:
#   port: 7070 (proxy)
#   admin port: 9901
#
# Routes to:
#   frontend: localhost:3000
#   keycloak: localhost:8000
#
# Keycloak realm: photos
# Client ID: photos

static_resources:
  secrets:
  - name: token_secret
    generic_secret:
      secret:
        inline_string: "bAz9ReuZ92gdOEsHG9H9aLZSjynPmo3o"
  - name: hmac_secret
    generic_secret:
      secret:
        inline_string: "photos-ng-hmac-secret-key-32chr"

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 7070
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: frontend_cluster
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              config:
                token_endpoint:
                  cluster: oauth_cluster
                  uri: http://localhost:8000/realms/photos/protocol/openid-connect/token
                  timeout: 3s
                authorization_endpoint: http://localhost:8000/realms/photos/protocol/openid-connect/auth
                redirect_uri: "http://localhost:7070/callback"
                redirect_path_matcher:
                  path:
                    exact: /callback
                signout_path:
                  path:
                    exact: /signout
                credentials:
                  cookie_names:
                    id_token: IdToken
                    refresh_token: RefreshToken
                  client_id: photos
                  token_secret:
                    name: token_secret
                  hmac_secret:
                    name: hmac_secret
                auth_scopes:
                - openid
                - profile
                - email
                forward_bearer_token: true
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.csrf
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.csrf.v3.CsrfPolicy
              filter_enabled:
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              shadow_enabled:
                default_value:
                  numerator: 0
                  denominator: HUNDRED
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: frontend_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: frontend_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ::1
                port_value: 3000

  - name: oauth_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: oauth_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8000

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
