resources/keycloak-postgres.yml
# PostgreSQL for Keycloak - compatible with podman play kube
#
# PostgreSQL settings:
#   user: keycloak
#   password: keycloak
#   database: keycloak
#   port: 5433 (to avoid conflict with app database)

---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: keycloak-postgres-data
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: v1
kind: Pod
metadata:
  name: keycloak-postgres
  labels:
    app: keycloak-postgres
spec:
  containers:
    - name: postgres
      image: docker.io/postgres:17
      ports:
        - containerPort: 5432
          hostPort: 5433
      env:
        - name: POSTGRES_USER
          value: keycloak
        - name: POSTGRES_PASSWORD
          value: keycloak
        - name: POSTGRES_DB
          value: keycloak
      volumeMounts:
        - name: keycloak-postgres-data
          mountPath: /var/lib/postgresql/data

  volumes:
    - name: keycloak-postgres-data
      persistentVolumeClaim:
        claimName: keycloak-postgres-data

  restartPolicy: Always
